--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="إعادة توجيه إلى موقع آخر">
+    <meta http-equiv="refresh" content="0; url=https://example.com">
+    <title>إعادة توجيه</title>
+</head>
+<body>
+    <p>إذا لم يتم إعادة توجيهك تلقائيًا، <a href="https://example.com">اضغط هنا</a>.</p>
+</body>
+</html>
